exports[`snapshoty zamrożonych zestawów > noc czysta 1`] = `
{
  "version": 1,
  "generatedAt": "2026-01-16T16:00:00.000Z",
  "site": {
    "id": "site-bledowska",
    "name": "Pustynia Błędowska",
    "lat": 50.35,
    "lon": 19.53,
    "bortle": 4,
    "walkMinutes": 15
  },
  "summary": {
    "headline": "Dziś można jechać na Pustynia Błędowska, okno 18:00–06:00.",
    "nights": 1,
    "go": 1,
    "firstGo": "2026-01-16T17:00:00.000Z"
  },
  "nights": [
    {
      "from": "2026-01-16T17:00:00.000Z",
      "to": "2026-01-17T05:00:00.000Z",
      "status": "go",
      "uncertain": false,
      "rejection": null,
      "warnings": [],
      "window": {
        "from": "2026-01-16T17:00:00.000Z",
        "to": "2026-01-17T05:00:00.000Z",
        "durationMinutes": 720,
        "moonLimited": false
      },
      "plan": {
        "departAt": "2026-01-16T16:15:23.537Z",
        "returnAt": "2026-01-17T05:59:36.462Z",
        "wakeAt": null,
        "sleepHours": null,
        "travelMinutes": 44.607711636654926
      },
      "minTemperature": 8,
      "targets": 78
    }
  ],
  "notices": [
    {
      "eventId": "conj-test",
      "title": "Koniunkcja testowa",
      "body": "Dziś, 22:30 — noc się nadaje, okno 18:00–06:00.",
      "reason": "new",
      "notifyAt": "2026-01-16T16:00:00.000Z",
      "withVerdict": true
    },
    {
      "eventId": "eclipse-test",
      "title": "Zaćmienie testowe",
      "body": "pt., 20 lut., 21:00 — zapowiedź, bez prognozy na tę noc (35 dni).",
      "reason": "preview",
      "notifyAt": "2026-02-13T16:00:00.000Z",
      "withVerdict": false
    }
  ]
}
`;

exports[`snapshoty zamrożonych zestawów > noc pod chmurami 1`] = `
{
  "version": 1,
  "generatedAt": "2026-01-16T16:00:00.000Z",
  "site": {
    "id": "site-bledowska",
    "name": "Pustynia Błędowska",
    "lat": 50.35,
    "lon": 19.53,
    "bortle": 4,
    "walkMinutes": 15
  },
  "summary": {
    "headline": "Brak nocy do wyjazdu w najbliższych 1 dobach.",
    "nights": 1,
    "go": 0,
    "firstGo": null
  },
  "nights": [
    {
      "from": "2026-01-17T17:00:00.000Z",
      "to": "2026-01-18T05:00:00.000Z",
      "status": "no-go",
      "uncertain": false,
      "rejection": {
        "kind": "conditions",
        "blocker": "cloud-low"
      },
      "warnings": [],
      "window": null,
      "plan": null,
      "minTemperature": null,
      "targets": 0
    }
  ],
  "notices": [
    {
      "eventId": "eclipse-test",
      "title": "Zaćmienie testowe",
      "body": "pt., 20 lut., 21:00 — zapowiedź, bez prognozy na tę noc (35 dni).",
      "reason": "preview",
      "notifyAt": "2026-02-13T16:00:00.000Z",
      "withVerdict": false
    }
  ]
}
`;

exports[`snapshoty zamrożonych zestawów > noc wietrzna 1`] = `
{
  "version": 1,
  "generatedAt": "2026-01-16T16:00:00.000Z",
  "site": {
    "id": "site-bledowska",
    "name": "Pustynia Błędowska",
    "lat": 50.35,
    "lon": 19.53,
    "bortle": 4,
    "walkMinutes": 15
  },
  "summary": {
    "headline": "Brak nocy do wyjazdu w najbliższych 1 dobach.",
    "nights": 1,
    "go": 0,
    "firstGo": null
  },
  "nights": [
    {
      "from": "2026-01-18T17:00:00.000Z",
      "to": "2026-01-19T05:00:00.000Z",
      "status": "no-go",
      "uncertain": false,
      "rejection": {
        "kind": "conditions",
        "blocker": "wind"
      },
      "warnings": [],
      "window": null,
      "plan": null,
      "minTemperature": null,
      "targets": 0
    }
  ],
  "notices": [
    {
      "eventId": "eclipse-test",
      "title": "Zaćmienie testowe",
      "body": "pt., 20 lut., 21:00 — zapowiedź, bez prognozy na tę noc (35 dni).",
      "reason": "preview",
      "notifyAt": "2026-02-13T16:00:00.000Z",
      "withVerdict": false
    }
  ]
}
`;

exports[`snapshoty zamrożonych zestawów > trzy noce razem 1`] = `
{
  "version": 1,
  "generatedAt": "2026-01-16T16:00:00.000Z",
  "site": {
    "id": "site-bledowska",
    "name": "Pustynia Błędowska",
    "lat": 50.35,
    "lon": 19.53,
    "bortle": 4,
    "walkMinutes": 15
  },
  "summary": {
    "headline": "Dziś można jechać na Pustynia Błędowska, okno 18:00–06:00.",
    "nights": 3,
    "go": 1,
    "firstGo": "2026-01-16T17:00:00.000Z"
  },
  "nights": [
    {
      "from": "2026-01-16T17:00:00.000Z",
      "to": "2026-01-17T05:00:00.000Z",
      "status": "go",
      "uncertain": false,
      "rejection": null,
      "warnings": [],
      "window": {
        "from": "2026-01-16T17:00:00.000Z",
        "to": "2026-01-17T05:00:00.000Z",
        "durationMinutes": 720,
        "moonLimited": false
      },
      "plan": {
        "departAt": "2026-01-16T16:15:23.537Z",
        "returnAt": "2026-01-17T05:59:36.462Z",
        "wakeAt": null,
        "sleepHours": null,
        "travelMinutes": 44.607711636654926
      },
      "minTemperature": 8,
      "targets": 78
    },
    {
      "from": "2026-01-17T17:00:00.000Z",
      "to": "2026-01-18T05:00:00.000Z",
      "status": "no-go",
      "uncertain": false,
      "rejection": {
        "kind": "conditions",
        "blocker": "cloud-low"
      },
      "warnings": [],
      "window": null,
      "plan": null,
      "minTemperature": null,
      "targets": 0
    },
    {
      "from": "2026-01-18T17:00:00.000Z",
      "to": "2026-01-19T05:00:00.000Z",
      "status": "no-go",
      "uncertain": true,
      "rejection": {
        "kind": "conditions",
        "blocker": "wind"
      },
      "warnings": [],
      "window": null,
      "plan": null,
      "minTemperature": null,
      "targets": 0
    }
  ],
  "notices": [
    {
      "eventId": "conj-test",
      "title": "Koniunkcja testowa",
      "body": "Dziś, 22:30 — noc się nadaje, okno 18:00–06:00.",
      "reason": "new",
      "notifyAt": "2026-01-16T16:00:00.000Z",
      "withVerdict": true
    },
    {
      "eventId": "eclipse-test",
      "title": "Zaćmienie testowe",
      "body": "pt., 20 lut., 21:00 — zapowiedź, bez prognozy na tę noc (35 dni).",
      "reason": "preview",
      "notifyAt": "2026-02-13T16:00:00.000Z",
      "withVerdict": false
    }
  ]
}
`;
